// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema.types enumType returns GraphQLEnumType 1`] = `
""""
Enum title
Enum description
"""
enum TestEnum {
  O_N_E
  TWO
}"
`;

exports[`schema.types generateProfileConfig creates config with description and resolve function 1`] = `
{
  "description": "Full profile
Full profile to test all generation functionality",
  "resolve": [Function],
  "type": "Test",
}
`;

exports[`schema.types generateProfileOptionsInputType creates input with providers enum and input parameters 1`] = `
""""Additional options to pass to OneSDK perform function"""
input Test {
  provider: TestProviderConfig
}

input TestProviderConfig {
  """Provider mock configuration"""
  mock: TestmockConfig

  """Provider superface configuration"""
  superface: TestsuperfaceConfig
}

input TestmockConfig

input TestsuperfaceConfig {
  parameters: TestsuperfaceProviderParameters
  security: TestsuperfaceProviderSecurity
}

"""Provider-specific parameters"""
input TestsuperfaceProviderParameters {
  """Parameter accepted by superface"""
  accessToken: String
}

"""Provider-specific security"""
input TestsuperfaceProviderSecurity {
  """Security accepted by superface"""
  api_key: SuperfaceApiKeySecurityValues

  """Security accepted by superface"""
  basic: SuperfaceBasicSecurityValues

  """Security accepted by superface"""
  bearer_token: SuperfaceBearerTokenSecurityValues

  """Security accepted by superface"""
  digest: SuperfaceDigestSecurityValues
}

input SuperfaceApiKeySecurityValues {
  apikey: String
}

input SuperfaceBasicSecurityValues {
  username: String
  password: String
}

input SuperfaceBearerTokenSecurityValues {
  token: String
}

input SuperfaceDigestSecurityValues {
  username: String
  password: String
}"
`;

exports[`schema.types generateRootType create Query type with profiles 1`] = `
"type Query {
  ProfileOne: ProfileOne
  Scope: Scope
}

type ProfileOne {
  field: String
}

type Scope {
  ProfileTwo: ScopeProfileTwo
}

type ScopeProfileTwo {
  UseCase: String
}"
`;

exports[`schema.types generateStructureResultType creates ScopeNameResult with description and result field 1`] = `
""""
Wrapping type to handle many possible types returned as result by OneSDK
"""
type ScopeNameResult {
  result: ScopeNameResultNode
}

type ScopeNameResultNode {
  """
  Result Field title
  Result Field description
  """
  field: String!

  """
  Named Field title
  Named Field description
  """
  namedField: String!
}"
`;

exports[`schema.types generateUseCaseFieldConfig for profile fixture creates field config with arguments, resolver and description 1`] = `
{
  "args": {
    "input": {
      "description": "Use-case inputs",
      "type": "ScopeNameUseCaseInput",
    },
    "options": {
      "type": "ScopeNameOptions",
    },
  },
  "description": "UseCase
UseCase description",
  "resolve": [Function],
  "type": "ScopeNameUseCaseResult",
}
`;

exports[`schema.types generateUseCaseFieldConfig for profile fixture with empty input fields creates arguments without input 1`] = `
{
  "args": {
    "options": {
      "type": "ScopeNameUseCaseOptions",
    },
  },
  "description": undefined,
  "resolve": [Function],
  "type": "ScopeNameUseCaseResult",
}
`;

exports[`schema.types generateUseCaseOptionsInputType creates input with providers enum and input parameters 1`] = `
""""Additional options to pass to OneSDK perform function"""
input Test {
  provider: TestProviderEnum
  parameters: TestProviderParameters
  security: TestProviderSecurity
}

enum TestProviderEnum {
  mock
  superface
}

"""Provider-specific parameters"""
input TestProviderParameters {
  """Parameter accepted by superface"""
  accessToken: String
}

"""Provider-specific security"""
input TestProviderSecurity {
  """Security accepted by superface"""
  api_key: SuperfaceApiKeySecurityValues

  """Security accepted by superface"""
  basic: SuperfaceBasicSecurityValues

  """Security accepted by superface"""
  bearer_token: SuperfaceBearerTokenSecurityValues

  """Security accepted by superface"""
  digest: SuperfaceDigestSecurityValues
}

input SuperfaceApiKeySecurityValues {
  apikey: String
}

input SuperfaceBasicSecurityValues {
  username: String
  password: String
}

input SuperfaceBearerTokenSecurityValues {
  token: String
}

input SuperfaceDigestSecurityValues {
  username: String
  password: String
}"
`;

exports[`schema.types generateUseCaseProviderParametersFields generates provider parameters for configured providers 1`] = `
{
  "accessToken": {
    "description": "Parameter accepted by superface",
    "type": "String",
  },
}
`;

exports[`schema.types generateUseCaseSecurityFields generates security fields for configured providers 1`] = `
{
  "api_key": {
    "description": "Security accepted by superface",
    "type": "SuperfaceApiKeySecurityValues",
  },
  "basic": {
    "description": "Security accepted by superface",
    "type": "SuperfaceBasicSecurityValues",
  },
  "bearer_token": {
    "description": "Security accepted by superface",
    "type": "SuperfaceBearerTokenSecurityValues",
  },
  "digest": {
    "description": "Security accepted by superface",
    "type": "SuperfaceDigestSecurityValues",
  },
}
`;

exports[`schema.types inputType returns GraphQLInputType 1`] = `
"type MyObjectType {
  """
  Primitive
  String
  """
  primitive_string: String

  """
  Primitive
  Number
  """
  primitive_number: Int

  """
  Primitive
  boolean
  """
  primitive_boolean: Boolean

  """
  Object
  Nested
  """
  nested_object: MyObjectTypeNestedObject
  list: [String!]

  """
  Enum title
  Enum description
  """
  enum: MyObjectTypeEnum
}

type MyObjectTypeNestedObject {
  """
  Nested field title
  Nested field description
  """
  field: String
}

"""
Enum title
Enum description
"""
enum MyObjectTypeEnum {
  ONE
  TWO
}"
`;

exports[`schema.types outputType returns GraphQLObjectType 1`] = `
"type MyObjectType {
  """
  Primitive
  String
  """
  primitive_string: String

  """
  Primitive
  Number
  """
  primitive_number: Int

  """
  Primitive
  boolean
  """
  primitive_boolean: Boolean

  """
  Object
  Nested
  """
  nested_object: MyObjectTypeNestedObject
  list: [String!]

  """
  Enum title
  Enum description
  """
  enum: MyObjectTypeEnum
}

type MyObjectTypeNestedObject {
  """
  Nested field title
  Nested field description
  """
  field: String
}

"""
Enum title
Enum description
"""
enum MyObjectTypeEnum {
  ONE
  TWO
}"
`;

exports[`schema.types scalarType returns GraphQLScalarType 1`] = `
""""
Scalar title
Scalar description
"""
scalar TestScalar"
`;
